# agentfs

./: APPFS-RFC.md  APPFS-adapter-grpc-bridge-v0.1.md  APPFS-adapter-http-bridge-v0.1.md  APPFS-adapter-implementation-plan-v0.1.md  APPFS-adapter-requirements-v0.1.md  APPFS-conformance-v0.1.md  APPFS-contract-tests-v0.1.md  CHANGELOG.md  CLAUDE.md  MANUAL.md  README.md  SPEC.md  TESTING.md  dist-workspace.toml  flake.nix  issue-61-comment.md
.claude/: settings.local.json
.claude/commands/: generate-py-sdk.md
.github/workflows/: go.yml  release.yml  rust.yml
cli/: Cargo.toml  TEST-WINDOWS.md  build.rs  test-run-mount-flag.sh  test-windows-mount.ps1
cli/scripts/: install-deps.sh
cli/src/: daemon.rs  fuse.rs  lib.rs  main.rs  nfs.rs  opts.rs  parser.rs  winfsp.rs
cli/src/cmd/: appfs.rs  fs.rs  init.rs  mcp_server.rs  mod.rs  mount.rs  mount_stub.rs  nfs.rs  ps.rs  run.rs  run_darwin.rs  run_linux.rs  run_nfs.rs  run_not_supported.rs  run_stub.rs  run_windows.rs  snapshot.rs  sync.rs  timeline.rs
cli/src/cmd/appfs/: grpc_bridge_adapter.rs  http_bridge_adapter.rs
cli/src/fuser/: channel.rs  mod.rs  reply.rs  request.rs  session.rs
cli/src/fuser/ll/: fuse_abi.rs  reply.rs  request.rs
cli/src/mount/: fuse.rs  mod.rs  winfsp.rs
cli/src/nfsserve/: context.rs  mod.rs  nfs_handlers.rs  rpc.rs  rpcwire.rs  tcp.rs  vfs.rs  xdr.rs
cli/src/sandbox/: linux.rs  mod.rs  overlay.rs
cli/tests/: all.sh  test-appfs-contract.sh  test-mount.sh  test-run-bash.sh
cli/tests/appfs/: README.md  run-live-with-adapter.sh  test-paging-errors.sh  test-path-safety.sh  test-streaming-lifecycle.sh  test-submit-order.sh
cli/tests/syscall/: test-common.h
examples/firecracker/: firecracker.sh
sandbox/: Cargo.toml
sdk/go/: README.md  agentfs.go  agentfs_test.go  benchmark_test.go  cache_test.go  errors.go  file.go  file_streaming_test.go  filesystem.go  filesystem_interfaces.go  go.mod  go.sum  guards.go  interfaces.go  iofs_test.go  kvstore.go  schema.go  toolcalls.go  types.go
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/agentfs_sdk/: __init__.py  agentfs.py  extensions.py  filesystem.py
sdk/python/examples/: filesystem_example.py  kvstore_example.py  toolcalls_example.py
sdk/python/src/agentfs/: __init__.py  filesystem.py  kv.py  toolcalls.py  turso_async.py
sdk/python/tests/: test_agentfs.py  test_extensions.py  test_filesystem.py  test_kv.py  test_toolcalls.py
sdk/rust/: Cargo.toml
sdk/rust/src/: appfs_adapter.rs  appfs_adapter_testkit.rs  appfs_demo_adapter.rs  connection_pool.rs  error.rs  filesystem.rs  kvstore.rs  lib.rs  toolcalls.rs
sdk/rust/src/filesystem/: agentfs.rs  fsignore.rs  hostfs.rs  hostfs_darwin.rs  hostfs_linux.rs  mod.rs  overlayfs.rs
(+27 files in other folders)
