[package]
name = "agentfs"
version = "0.4.0-pre.9"
edition = "2021"
repository = "https://github.com/tursodatabase/agentfs"

[lib]
name = "agentfs"
path = "src/lib.rs"

[[bin]]
name = "agentfs"
path = "src/main.rs"

[dependencies]
agentfs-sdk = { path = "../sdk/rust" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
turso = "0.4.0-pre.17"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12.5"
clap_complete = { version = "=4.5.61", features = ["unstable-dynamic"] }
dirs = "6"
# NFS server for userspace filesystem (used by `agentfs run` and `agentfs nfs`)
uuid = { version = "1", features = ["v4"] }
nfsserve = "0.10"
async-trait = "0.1"

# Unix dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Linux-only dependencies for FUSE and sandbox functionality
[target.'cfg(target_os = "linux")'.dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Sandbox dependencies - (requires libunwind-dev on ARM)
agentfs-sandbox = { path = "../sandbox" }
reverie = { git = "https://github.com/facebookexperimental/reverie" }
reverie-ptrace = { git = "https://github.com/facebookexperimental/reverie" }
reverie-process = { git = "https://github.com/facebookexperimental/reverie" }
# Vendored fuser dependencies (pure-Rust FUSE implementation)
log = "0.4"
memchr = "2.7"
page_size = "0.6"
smallvec = "1.6"
zerocopy = { version = "0.8", features = ["derive"] }
nix = { version = "0.29", features = ["fs", "user"] }


# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
tempfile = "3.23.0"
