[project]
name = "agentfs"
version = "0.1.0"
description = "AgentFS Python SDK - Key-value store, filesystem, and tool tracking"
requires-python = ">=3.11"
dependencies = [
    "libsql",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
