[package]
name = "agentfs-sdk"
version = "0.3.0-pre.4"
edition = "2021"
description = "AgentFS SDK for Rust"
license = "MIT"

[dependencies]
turso = { git = "https://github.com/tursodatabase/turso.git", tag = "v0.4.0-pre.14" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3"
